samples/_failures_safe/1761606113_815ff9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee1cfe28.c: In function ‘main’:
./samples/SAFE/__tmp_ee1cfe28.c:156:5: error: expected expression at end of input
  156 |     for (int i = 0; i < edge_count; i++)
      |     ^~~
./samples/SAFE/__tmp_ee1cfe28.c:156:5: error: expected declaration or statement at end of input
